# geonav_transform

./: .gitignore  CMakeLists.txt  LICENSE  README.md  package.xml  setup.py
config/: custom_rosconsole.conf
doc/: Makefile  conf.py  geonav_transform.rst  index.rst  manifest.yaml  modules.rst
doc/html/: alvinxy.html  genindex.html  geonav_transform.html  index-msg.html  index.html  modules.html  objects.inv  py-modindex.html  search.html  searchindex.js
doc/html/.doctrees/: alvinxy.doctree  environment.pickle  geonav_transform.doctree  index.doctree  modules.doctree
doc/html/_modules/: index.html
doc/html/_modules/alvinxy/: alvinxy.html
doc/html/_modules/geonav_transform/: geonav_conversions.html
doc/html/_sources/: alvinxy.txt
examples/: compare_alvin_geonav.py  gazebo_elestero_ex.py  geonav_alvin_ex.py  geonav_alvinxy_compare.py  geonav_local_ex.py  utm_ex.py
include/geonav_transform/: .#geonav_transform.h  geonav_transform.h  geonav_utilities.h  navsat_conversions.h
launch/: cavr.launch  elestero.launch  geonav_transform.launch
matlab/: matlab_ex.m
matlab/alvinxy/: deg2degmin.m  degmin2deg.m  ll2xy.m  ll2xy2ll_example_at340.xls  ll2xyv.m  mdeglat.m  mdeglon.m  xy2ll.m  xy2lldegmin.m
matlab/geonav/: geonav_ex.m  ll2xy.cpp  ll2xy.m  make_mex.sh  xy2ll.cpp  xy2ll.m
rviz/: frames.rviz
src/: geonav_transform.cpp  geonav_transform_node.cpp  geonav_utilities.cpp  ll2xy.cpp  navsat_conversions.py  xy2ll.cpp
src/alvinxy/: alvinxy.py  alvinxy_example.py
src/geonav_transform/: geonav_conversions.py  utmtest.py
test/: compare_alvin_geonav.py  pubodom.py
